--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,7 @@
   "dependencies": {
     "jquery": "2.1.3",
     "jquery-deparam": "~0.2.0",
-    "jquery-cookie": "~1.4.1",
+    "js-cookie": "~3.0.0-rc.1",
     "pubsub-js": "~1.5.2"
   }
 }
